helloworld/aws-eks-kotlin/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aws-eks-backend
  labels:
    app: aws-eks-backend
spec:
  type: ClusterIP
  selector:
    app: aws-eks-backend
  ports:
    - name: http
      port: 80
      targetPort: 8080
